# OTMScrapper2

./: .gitignore  pyproject.toml
examples/: CompanySpy_AllSites.py  JobSpy_AllSites.py
src/jobspy/jobs/: __init__.py
src/jobspy/scrapers/: __init__.py  utils.py
src/jobspy/scrapers/wtj/: __init__.py
src/jobspyOtm/: __init__.py
src/jobspyOtm/company/: __init__.py  glassdoor_company.py  glassdoor_company_with_name.py  indeeds_company.py  wtj_company.py
src/jobspyOtm/jobs/: __init__.py
src/jobspyOtm/salary/: __init__.py  glassdoor_salary.py
src/jobspyOtm/scrapers/: exceptions.py  utils.py
src/jobspyOtm/scrapers/glassdoor/: __init__.py
src/jobspyOtm/scrapers/wtj/: __init__.py
src/tests/: test_all.py  test_glassdoor.py  test_glassdoorCpy.py  test_glassdoorSalary.py  test_indeed.py  test_linkedin.py  test_salary.py  test_welcometojunge.py  test_ziprecruiter.py
