[tool.poetry]
name = "python-jobspy-otm"
version = "1.1.80"
description = "Job scraper for LinkedIn, Indeed, Glassdoor, welcome to jungle & ZipRecruiter"
authors = ["Duchesne Lucas <lucas@onetomany.io>"]
homepage = "https://github.com/OneToManyDigital"
readme = "README.md"

packages = [
    { include = "jobspyOtm", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.0"
pydantic = "^2.3.0"
tls-client = "^1.0.1"
markdownify = "^0.11.6"
unidecode ="^1.3.8"
regex = "^2024.4.28"

setuptools = "^69.5.1"
botasaurus = "^4.0.14"
lxml = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
jupyter = "^1.0.0"
black = "*"
pre-commit = "*"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
